--- a/css/styles.css
+++ b/css/styles.css
@@ -13,18 +13,38 @@ h1{
 }
 
 .container-fluid{
-    padding: 3rem 10rem;
+    padding: 3rem 10rem 7rem;
 }
 
 .rotate{
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right:11rem;
+}
+
+@media (max-width: 1028px) {
+
+    #title{
+        text-align: center;
+    }
+
+    .rotate{
+        width: 70%;
+        padding-top: 1rem;
+        position: static;
+        transform: rotate(0);
+    }
+}
+
+.title-btn{
+    padding: 0.5rem 1rem;
+    margin-right: 0.5rem;
 }
 
 #title{
     background-color: #ff4c68;
     color:white;
-    margin-bottom: 10rem;
 }
 
 /* Navigation Bar */
@@ -50,17 +70,20 @@ h1{
 }
 
 
-/* Section Two  */
+/* Section Two  - Features */
 
 #features{
-    margin-bottom: 5rem;
+    background-color: white;
+    padding:7rem 5rem 3rem; 
+    position: relative;
+    z-index: 1;
 }
 
 h3{
     font-family: "Montserrat";
     font-weight: 700;
     font-size: 1.5rem;
-    margin: 0.5rem auto;
+    margin: 1rem auto 0;
     text-align: center;
 }
 
@@ -68,7 +91,7 @@ h3{
 .checked-circle{
     width: 100%;
     text-align: center;
-    font-size: 4rem;
+    /* font-size: 4rem; */
     color: #ef8172;
 }
 
@@ -78,15 +101,96 @@ h3{
 
 
 .features-content{
-    color : black;
-    opacity: 0.6;
+    color : #8f8f8f;
     margin-bottom: 5rem;
+    text-align: center;
+    padding:1rem 2.5rem 0;
+}
+
+
+
+/* Testimonial Section */
+
+
+h2{
+    font-family: "Montserrat";
+    font-weight: 700;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+#testimonials{
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
+}
+
+.carousel-item{
+    padding: 7rem 15rem;
+}
+
+.testimonial-image{
+    width: 10rem;
+    border-radius: 100%;
+    margin:1.5rem;
+}
+
+/*  Press Section */
+#press{
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3rem;
+}
+
+.press-logo{
+    margin: 1.5rem 1.5rem 2rem;
+    width: 15rem;
+}
+
+/*  pricing */
+
+#pricing{
+    padding: 5rem;
     text-align: center;
 }
 
-.horizontal-line{
-    margin: 5rem 0;
-    border: 0.3rem;
-    border-style: solid none none;
-    color: tomato;
+.pricing-column{
+    padding: 3rem 2rem;
+}
+
+
+/* Bottom Section */
+
+#cta{
+    background-color: #ff4c68;
+    text-align: center;
+    padding: 7rem 15rem;
+}
+
+.cta-btn{
+    padding: 0.5rem;
+    margin: 3rem 1rem;
+}
+
+.cta-h3{
+    font-size: 3.5rem;
+    color: #fff;
+}
+
+/* Footer */
+
+#footer{
+    padding: 3rem 1rem 2rem;
+    text-align: center;
+    background-color: #fff;
+}
+
+.footer-icon{
+    padding: 0.5rem;
+}
+
+.footer-content{
+    font-size: 1rem;
+    color: black;
+    opacity: 0.5;
 }
